GEODE-10466: Complete Jakarta EE 10, Spring 6.x, Spring Shell 3.x, Apache HttpComponents 5.x, and Jetty 12 migration
Complete modernization of Apache Geode to Jakarta EE 10 ecosystem with comprehensive
framework upgrades, extensive testing, and production-ready implementation.

===================================================================================
CORE MIGRATIONS
===================================================================================

Jakarta EE 10 Migration
------------------------
- Migrated all javax.* → jakarta.* imports across 173+ files
- Updated Servlet API: javax.servlet → jakarta.servlet (Servlet 6.0)
- Updated JTA: javax.transaction → jakarta.transaction
- Updated JAXB: javax.xml.bind → jakarta.xml.bind
- Updated JCA: javax.resource → jakarta.resource
- Updated Mail: javax.mail → jakarta.mail
- Updated Annotations: javax.annotation → jakarta.annotation
- Updated CDI: javax.inject → jakarta.inject

Spring Framework 6.x Upgrade
-----------------------------
- Spring Framework: 5.3.21 → 6.1.14
- Spring Security: 5.6.5 → 6.3.4
- Spring Boot: 2.6.7 → 3.3.5
- Spring HATEOAS: 1.5.0 → 2.3.3
- Spring LDAP: 2.4.0 → 3.2.7
- SpringDoc OpenAPI: 1.6.8 → 2.6.0

Spring Security 6.x Migration
------------------------------
- Migrated from WebSecurityConfigurerAdapter to SecurityFilterChain pattern
- Changed @EnableGlobalMethodSecurity to @EnableMethodSecurity
- Updated authorizeRequests() → authorizeHttpRequests()
- Updated antMatchers()/mvcMatchers() → requestMatchers()
- Fixed XSS protection API and headers configuration
- Updated all security configurations with lambda syntax

Spring Shell 3.x Migration
---------------------------
- Migrated from Spring Shell 1.2.0 to 3.3.3
- Updated annotations: @CliCommand → @ShellMethod, @CliOption → @ShellOption
- Changed @CliAvailabilityIndicator → @ShellMethodAvailability
- Migrated ShellComponent from interface to annotation usage
- Updated 118+ command classes across all modules
- Fixed command loading t